objects/Latam_AssetItemAutoNumber__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>It is used by formula on asset line item to retrieve unique number associated with assets.</description>
    <fields>
        <fullName>Auto_Format__c</fullName>
        <description>Format Text - to be used as prefix</description>
        <label>Auto Format</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latam_Latest_Number__c</fullName>
        <description>Latest number will be used to create auto asset number</description>
        <label>Latest Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Separator__c</fullName>
        <description>Use this separator to split the Numbers</description>
        <label>Separator</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Number__c</fullName>
        <label>Starting Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Asset Line Item Auto Number</label>
</CustomObject>